# tts-reader-rust

./: .env  Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: main.rs  polly.rs
