[package]
name = "tts_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"                    # HTTP framework
hmac = "0.12"                   # HMAC for AWS signing
sha2 = "0.10"                   # SHA2 hashing for AWS signing
hex = "0.4"                     # Hex encoding/decoding
chrono = "0.4"                  # Date and time utilities
base64 = "0.21.0"               # Base64 encoding
futures = "0.3.26"              # Async utilities
bytes = "1.4.0"                 # Byte manipulation

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"              # Utility for Tokio, including `StreamReader`

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"              # JSON utilities

# HTTP client for interacting with AWS Polly
reqwest = { version = "0.11", features = ["json"] }

# Environment variable management
dotenv = "0.15"

# Logging and debugging
tracing = "0.1"
tracing-subscriber = "0.3"

# Middleware
tower-http = { version = "0.4", features = ["cors", "fs"] }

[dev-dependencies]
cargo-watch = "8.4.0"           # Auto-rebuilding during development
